fix: added JVM-options to prevent warnings on startup